--- a/terms.html
+++ b/terms.html
@@ -38,27 +38,28 @@
 
 <body class="terms-and-conditions-page">
 
-  <header id="header" class="header d-flex align-items-center fixed-top">
+    <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <img src="assets/img/dtcpak logo.png" alt="Digital Transformation Company Pakistan Logo" class="img-fluid" style="max-height: 70px; width: auto;">
-      </a>
+        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <!-- <img src="assets/img/logo.webp" alt=""> -->
+<img src="assets/img/dtcpak logo.png" alt="Your Software House Logo" class="img-fluid" style="max-height: 70px; width: auto;">      </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="#hero" class="active">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="service-details.html">Services</a></li>
           <li><a href="portfolio-details.html">Portfolio</a></li>
-          <li><a href="#team">Team</a></li>
-          <li><a href="contact-us.html">Contact</a></li>
-          <!-- <li><a href="privacy-policy.html">Privacy Policy</a></li>
-          <li><a href="terms.html" class="active">Terms and Conditions</a></li> -->
+          <!-- <li><a href="#team">Team</a></li> -->
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
       <a class="btn-getstarted" href="get-started.html">Get Started</a>
+
     </div>
   </header>
 
