this is working

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="service-details.html">Services</a></li>
           <li><a href="portfolio-details.html">Portfolio</a></li>
@@ -120,17 +120,19 @@
               <div class="info-box" data-aos="fade-up" data-aos-delay="200">
                 <i class="bi bi-geo-alt"></i>
                 <h3>Our Address</h3>
-                <p>A108 Adam Street, New York, NY 535022, United States</p>
+                 <p>Innovista, Defence Central  Library</p>
+          <p>Sunset Boulevard, Phase 2 Extension Road</p>
+          <p>Karachi</p>
               </div>
               <div class="info-box" data-aos="fade-up" data-aos-delay="300">
                 <i class="bi bi-telephone"></i>
                 <h3>Call Us</h3>
-                <p><a href="tel:+155895548855">+1 5589 55488 55</a></p>
+          <p class="mt-4"><strong>Phone:</strong> <span>+92 303 2590468</span></p>
               </div>
               <div class="info-box" data-aos="fade-up" data-aos-delay="400">
                 <i class="bi bi-envelope"></i>
                 <h3>Email Us</h3>
-                <p><a href="mailto:info@example.com">info@example.com</a></p>
+          <p><strong>Email:</strong> <span>dtcpakistani@gmail.com</span></p>
               </div>
             </div>
           </div>
@@ -140,9 +142,7 @@
         <div class="row mt-5">
           <div class="col-lg-12" data-aos="fade-up" data-aos-delay="500">
             <div class="map-placeholder">
-              <!-- Placeholder for map (e.g., Google Maps iframe or static image) -->
-              <img src="https://picsum.photos/1200/400?random=71" alt="Office Location Map" class="img-fluid" style="width: 100%; height: 400px; object-fit: cover;">
-              <p class="text-center mt-3">*Map placeholder: Integrate Google Maps API or use a static map image for the actual location.</p>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3620.073370685707!2d67.057757!3d24.8311695!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33c47910d7623%3A0xe55d4b1b10cd06fe!2sCapt%20Waseem%20Ud%20Din%20Razi%20Shaheed%20Library!5e0!3m2!1sen!2s!4v1718630000000!5m2!1sen!2s" width="100%" height="400" style="border:0; border-radius: 12px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
         </div>
@@ -214,8 +214,8 @@
 
   <!-- Floating Contact Buttons -->
   <div class="floating-contact-buttons">
-    <a href="https://wa.me/923031234567" target="_blank" title="Chat on WhatsApp"><i class="bi bi-whatsapp"></i></a>
-    <a href="tel:+923031234567" class="phone-btn" title="Call Us"><i class="bi bi-telephone"></i></a>
+    <a href="https://wa.me/92 303 2590468" target="_blank" title="Chat on WhatsApp"><i class="bi bi-whatsapp"></i></a>
+    <a href="tel:+92 303 2590468" class="phone-btn" title="Call Us"><i class="bi bi-telephone"></i></a>
   </div>
 
   <!-- Scroll Top -->
