--- a/service-details.html
+++ b/service-details.html
@@ -42,7 +42,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="service-details.html">Services</a></li>
           <li><a href="portfolio-details.html">Portfolio</a></li>
@@ -84,7 +84,7 @@
               <h3>Digital Marketing</h3>
               <img src="https://images.unsplash.com/photo-1557838923-2985c318be48?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8ZGlnaXRhbCUyMG1hcmtldGluZ3xlbnwwfHwwfHx8MA%3D%3D" alt="Digital Marketing" class="img-fluid rounded mb-3">
               <p>Boost your online presence with tailored digital marketing strategies, engaging your audience and driving results across social media, email, and more.</p>
-              <a href="dm.html" class="btn btn-outline-primary btn-sm mt-2">Learn More</a>
+              <!-- <a href="dm.html" class="btn btn-outline-primary btn-sm mt-2">Learn More</a> -->
             </div>
           </div>
           <!-- Graphic Designing Card -->
@@ -94,7 +94,7 @@
               <h3>Graphic Designing</h3>
               <img src="https://plus.unsplash.com/premium_photo-1663100678842-d89cb7b084ee?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8Z3JhcGhpY3MlMjBkZXNpZ25pbmd8ZW58MHx8MHx8fDA%3D" alt="Graphic Designing" class="img-fluid rounded mb-3">
               <p>Transform your brand with stunning visuals, from logos to marketing materials, crafted by our expert designers to captivate and convert.</p>
-              <a href="gd.html" class="btn btn-outline-primary btn-sm mt-2">Learn More</a>
+              <!-- <a href="gd.html" class="btn btn-outline-primary btn-sm mt-2">Learn More</a> -->
             </div>
           </div>
           <!-- Web Development Card -->
@@ -104,7 +104,7 @@
               <h3>Web Development</h3>
               <img src="https://images.unsplash.com/photo-1571171637578-41bc2dd41cd2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fHdlYiUyMGRldmVsb3BtZW50fGVufDB8fDB8fHww" alt="Web Development" class="img-fluid rounded mb-3">
               <p>Build responsive, high-performance websites and web apps with seamless user experiences and robust functionality.</p>
-              <a href="web.html" class="btn btn-outline-primary btn-sm mt-2">Learn More</a>
+              <!-- <a href="web.html" class="btn btn-outline-primary btn-sm mt-2">Learn More</a> -->
             </div>
           </div>
           <!-- SEO Card -->
@@ -114,7 +114,7 @@
               <h3>Search Engine Optimization </h3>
               <img src="https://plus.unsplash.com/premium_photo-1683980578016-a1f980719ec2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8c2VvfGVufDB8fDB8fHww" alt="SEO" class="img-fluid rounded mb-3">
               <p>Enhance your search engine rankings and drive organic traffic with proven SEO techniques and content optimization.</p>
-              <a href="seo.html" class="btn btn-outline-primary btn-sm mt-2">Learn More</a>
+              <!-- <a href="seo.html" class="btn btn-outline-primary btn-sm mt-2">Learn More</a> -->
             </div>
           </div>
         </div>
@@ -186,8 +186,8 @@
 
   <!-- Floating Contact Buttons -->
   <div class="floating-contact-buttons">
-    <a href="https://wa.me/923031234567" target="_blank" title="Chat on WhatsApp"><i class="bi bi-whatsapp"></i></a>
-    <a href="tel:+923031234567" class="phone-btn" title="Call Us"><i class="bi bi-telephone"></i></a>
+    <a href="https://wa.me/92 303 2590468" target="_blank" title="Chat on WhatsApp"><i class="bi bi-whatsapp"></i></a>
+    <a href="tel:+92 303 2590468" class="phone-btn" title="Call Us"><i class="bi bi-telephone"></i></a>
   </div>
 
   <!-- Scroll Top -->
