--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="service-details.html">Services</a></li>
           <li><a href="portfolio-details.html">Portfolio</a></li>
@@ -253,7 +253,10 @@
     </section><!-- End About Section -->
 
   </main>
-
+  <div class="floating-contact-buttons">
+    <a href="https://wa.me/92 303 2590468" target="_blank" title="Chat on WhatsApp"><i class="bi bi-whatsapp"></i></a>
+    <a href="tel:+92 303 2590468" class="phone-btn" title="Call Us"><i class="bi bi-telephone"></i></a>
+  </div>
    <footer id="footer" class="footer">
 
     <div class="container footer-top">
