--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -48,7 +48,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="service-details.html">Services</a></li>
           <li><a href="portfolio-details.html">Portfolio</a></li>
@@ -128,7 +128,7 @@
                 <li>Request data portability or restrict processing.</li>
                 <li>File a complaint with a data protection authority.</li>
               </ul>
-              <p data-aos="fade-up" data-aos-delay="1700">To exercise these rights, contact us at <a href="mailto:info@example.com">info@example.com</a>.</p>
+              <p data-aos="fade-up" data-aos-delay="1700">To exercise these rights, contact us at <a href="mailto:info@digitaltransformationcompanypakistan.com">Email</a>.</p>
 
               <h3 data-aos="fade-up" data-aos-delay="1800">6. Cookies and Tracking Technologies</h3>
               <p data-aos="fade-up" data-aos-delay="1900">We use cookies to enhance your browsing experience. You can manage cookie preferences through your browser settings. Disabling cookies may affect website functionality.</p>
@@ -218,9 +218,9 @@
 
 
   <!-- Floating Contact Buttons -->
-  <div class="floating-contact-buttons">
-    <a href="https://wa.me/923031234567" target="_blank" title="Chat on WhatsApp"><i class="bi bi-whatsapp"></i></a>
-    <a href="tel:+923031234567" class="phone-btn" title="Call Us"><i class="bi bi-telephone"></i></a>
+   <div class="floating-contact-buttons">
+    <a href="https://wa.me/92 303 2590468" target="_blank" title="Chat on WhatsApp"><i class="bi bi-whatsapp"></i></a>
+    <a href="tel:+92 303 2590468" class="phone-btn" title="Call Us"><i class="bi bi-telephone"></i></a>
   </div>
 
   <!-- Scroll Top -->
