--- a/about.html
+++ b/about.html
@@ -158,7 +158,7 @@
         </div>
 
         <!-- Milestones -->
-        <div class="row mt-5">
+        <!-- <div class="row mt-5">
           <div class="col-lg-12 text-center" data-aos="fade-up" data-aos-delay="900">
             <h2 class="section-title">Our Journey</h2>
             <p class="lead fs-5">Milestones that define DTCPak’s rise to excellence.</p>
@@ -193,10 +193,10 @@
               <p>Earned recognition as a top software house with a global client base.</p>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- Testimonials -->
-        <div class="row mt-5">
+        <!-- <div class="row mt-5">
           <div class="col-lg-12 text-center" data-aos="fade-up" data-aos-delay="1400">
             <h2 class="section-title">Client Success Stories</h2>
             <p class="lead fs-5">See why businesses trust DTCPak for their digital transformation.</p>
@@ -239,7 +239,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- Call to Action -->
         <div class="row mt-5">
