map updated on home

--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
 
       <!-- Google Maps (Full Width) -->
       <div class="map-section" data-aos="fade-up" data-aos-delay="200">
-        <iframe src="https://www.google.com/maps/place/Capt+Waseem+Ud+Din+Razi+Shaheed+Library/@24.8311695,67.057757,17z/data=!3m1!4b1!4m6!3m5!1s0x3eb33c47910d7623:0xe55d4b1b10cd06fe!8m2!3d24.8311647!4d67.0603319!16s%2Fg%2F1tx1rp6w?entry=ttu&g_ep=EgoyMDI1MDYxMS4wIKXMDSoASAFQAw%3D%3D" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3620.073370685707!2d67.057757!3d24.8311695!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33c47910d7623%3A0xe55d4b1b10cd06fe!2sCapt%20Waseem%20Ud%20Din%20Razi%20Shaheed%20Library!5e0!3m2!1sen!2s!4v1718630000000!5m2!1sen!2s" width="100%" height="400" style="border:0; border-radius: 12px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
 
       <!-- Contact Form Section (Overlapping) -->
