links updated on homepage

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </div>
               </div>
 
-              <a href="#services" class="btn btn-primary mt-4">Explore Our Services</a>
+              <a href="service-details.html" class="btn btn-primary mt-4">Explore Our Services</a>
             </div>
           </div>
         </div>
@@ -324,11 +324,11 @@
               <div class="service-icon">
                 <i class="bi bi-palette"></i>
               </div>
-              <a href="#contact" class="card-action d-flex align-items-center justify-content-center rounded-circle">
+              <a href="service-details.html" class="card-action d-flex align-items-center justify-content-center rounded-circle">
                 <i class="bi bi-arrow-up-right"></i>
               </a>
               <h3>
-                <a href="#contact">
+                <a href="service-details.html">
                   Graphic <span>Designing</span>
                 </a>
               </h3>
@@ -340,11 +340,11 @@
               <div class="service-icon">
                 <i class="bi bi-search"></i>
               </div>
-              <a href="#contact" class="card-action d-flex align-items-center justify-content-center rounded-circle">
+              <a href="service-details.html" class="card-action d-flex align-items-center justify-content-center rounded-circle">
                 <i class="bi bi-arrow-up-right"></i>
               </a>
               <h3>
-                <a href="#contact">
+                <a href="service-details.html">
                   SEO <span>Services</span>
                 </a>
               </h3>
@@ -456,8 +456,8 @@
             </div>
 
             <div class="cta-buttons d-flex flex-wrap gap-3">
-              <a href="#contact" class="btn btn-primary">Get Started</a>
-              <a href="#services" class="btn btn-outline">Learn More</a>
+              <a href="get-started.html" class="btn btn-primary">Get Started</a>
+              <a href="service-details.html" class="btn btn-outline">Learn More</a>
             </div>
           </div>
 
