this is working much better

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               </div>
 
               <div class="cta-button">
-                <a href="#services" class="btn">
+                <a href="service-details.html" class="btn">
                   <span>EXPLORE SERVICES</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
@@ -277,7 +277,7 @@
             <div class="col-lg-4 col-md-12">
               <div class="service-summary">
                 <p>We provide end-to-end digital services, including digital marketing, web development, graphic designing, and SEO, to help your business succeed online.</p>
-                <a href="#contact" class="service-btn">
+                <a href="get-started.html" class="service-btn">
                   Get Started
                   <i class="bi bi-arrow-right"></i>
                 </a>
