favicon and page titles updated

--- a/about.html
+++ b/about.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>About Us - Digital Transformation Company Pakistan</title>
+  <title>About</title>
   <meta name="description" content="Explore Digital Transformation Company Pakistan (DTCPak), a top software house in Lahore, delivering innovative web development, digital marketing, graphic designing, and SEO solutions.">
   <meta name="keywords" content="about us, digital transformation company pakistan, software house, web development, digital marketing, graphic designing, seo services, lahore, technology solutions">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/dtcpak logo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
