--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Contact Us - Strategy Bootstrap Template</title>
+  <title>Contact</title>
   <meta name="description" content="Get in touch with us through our contact form or find our contact details and location.">
   <meta name="keywords" content="contact us, strategy, bootstrap template, digital agency">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/dtcpak logo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
