--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Privacy Policy - Digital Transformation Company Pakistan</title>
+  <title>Privacy Policy</title>
   <meta name="description" content="Learn how Digital Transformation Company Pakistan collects, uses, and protects your personal information.">
   <meta name="keywords" content="privacy policy, digital transformation company pakistan, data protection, software house">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/dtcpak logo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
