--- a/seo.html
+++ b/seo.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Get Started - Strategy Bootstrap Template</title>
+    <title>Seo</title>
     <meta
       name="description"
       content="Start your journey with us by filling out our get started form."
@@ -11,7 +11,7 @@
     <meta name="keywords" content="get started, strategy, bootstrap template" />
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" />
+    <link href="assets/img/dtcpak logo.png" rel="icon" />
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <!-- Fonts -->
