--- a/service-details.html
+++ b/service-details.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Services - Your Software House</title>
+  <title>Services</title>
   <meta name="description" content="Explore our expert services in digital marketing, graphic designing, web development, and SEO.">
   <meta name="keywords" content="digital marketing, graphic designing, web development, SEO, software house">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/dtcpak logo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
