--- a/terms.html
+++ b/terms.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Terms and Conditions - Digital Transformation Company Pakistan</title>
+  <title>Terms and Conditions</title>
   <meta name="description" content="Review the Terms and Conditions for using services provided by Digital Transformation Company Pakistan.">
   <meta name="keywords" content="terms and conditions, digital transformation company pakistan, software house, service agreement">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/dtcpak logo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
