--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Your Software House</title>
+  <title>Home</title>
   <meta name="description" content="Your Software House provides expert digital marketing, web development, graphic designing, and SEO services to elevate your business in the digital world.">
   <meta name="keywords" content="digital marketing, web development, graphic designing, SEO services, software house">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/dtcpak logo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
