--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portfolio Details - Strategy Bootstrap Template</title>
+  <title>Portfolio</title>
   <meta name="description" content="Explore our portfolio across Digital Marketing, Web Development, Graphic Designing, and SEO Services.">
   <meta name="keywords" content="portfolio, digital marketing, web development, graphic designing, seo services, strategy">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/dtcpak logo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
