--- a/web.html
+++ b/web.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Get Started - Strategy Bootstrap Template</title>
+  <title>Web</title>
   <meta name="description" content="Start your journey with us by filling out our get started form.">
   <meta name="keywords" content="get started, strategy, bootstrap template">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/dtcpak logo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
