--- a/service-details.html
+++ b/service-details.html
@@ -82,7 +82,7 @@
             <div class="service-card">
               <div class="service-icon"><i class="bi bi-megaphone"></i></div>
               <h3>Digital Marketing</h3>
-              <img src="https://images.unsplash.com/photo-1557838923-2985c318be48?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8ZGlnaXRhbCUyMG1hcmtldGluZ3xlbnwwfHwwfHx8MA%3D%3D" alt="Digital Marketing" class="img-fluid rounded mb-3">
+              <img src="https://images.unsplash.com/photo-1557838923-2985c318be48?auto=format&fit=crop&w=500&q=60" alt="Digital Marketing" class="img-fluid rounded mb-3">
               <p>Boost your online presence with tailored digital marketing strategies, engaging your audience and driving results across social media, email, and more.</p>
               <!-- <a href="dm.html" class="btn btn-outline-primary btn-sm mt-2">Learn More</a> -->
             </div>
@@ -92,7 +92,7 @@
             <div class="service-card">
               <div class="service-icon"><i class="bi bi-brush"></i></div>
               <h3>Graphic Designing</h3>
-              <img src="https://plus.unsplash.com/premium_photo-1663100678842-d89cb7b084ee?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8Z3JhcGhpY3MlMjBkZXNpZ25pbmd8ZW58MHx8MHx8fDA%3D" alt="Graphic Designing" class="img-fluid rounded mb-3">
+              <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=500&q=60" alt="Graphic Designing" class="img-fluid rounded mb-3">
               <p>Transform your brand with stunning visuals, from logos to marketing materials, crafted by our expert designers to captivate and convert.</p>
               <!-- <a href="gd.html" class="btn btn-outline-primary btn-sm mt-2">Learn More</a> -->
             </div>
@@ -102,7 +102,7 @@
             <div class="service-card">
               <div class="service-icon"><i class="bi bi-code-slash"></i></div>
               <h3>Web Development</h3>
-              <img src="https://images.unsplash.com/photo-1571171637578-41bc2dd41cd2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fHdlYiUyMGRldmVsb3BtZW50fGVufDB8fDB8fHww" alt="Web Development" class="img-fluid rounded mb-3">
+              <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=500&q=60" alt="Web Development" class="img-fluid rounded mb-3">
               <p>Build responsive, high-performance websites and web apps with seamless user experiences and robust functionality.</p>
               <!-- <a href="web.html" class="btn btn-outline-primary btn-sm mt-2">Learn More</a> -->
             </div>
@@ -112,7 +112,7 @@
             <div class="service-card">
               <div class="service-icon"><i class="bi bi-search"></i></div>
               <h3>Search Engine Optimization </h3>
-              <img src="https://plus.unsplash.com/premium_photo-1683980578016-a1f980719ec2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8c2VvfGVufDB8fDB8fHww" alt="SEO" class="img-fluid rounded mb-3">
+              <img src="https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=500&q=60" alt="SEO" class="img-fluid rounded mb-3">
               <p>Enhance your search engine rankings and drive organic traffic with proven SEO techniques and content optimization.</p>
               <!-- <a href="seo.html" class="btn btn-outline-primary btn-sm mt-2">Learn More</a> -->
             </div>
