--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
         <div class="row gy-5">
           <!-- Contact Form -->
           <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" class="php-email-form">
+            <form action="forms/sendmail.php" method="post" class="php-email-form">
               <div class="row gy-4">
                 <div class="col-md-6">
                   <input type="text" name="name" class="form-control" placeholder="Your Name" required>
