--- a/get-started.html
+++ b/get-started.html
@@ -91,7 +91,7 @@
       <div class="container" data-aos="fade-up">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <form action="forms/get-started.php" method="post" class="php-email-form">
+            <form action="forms/sendmail.php" method="post" class="php-email-form">
               <div class="row gy-4">
                 <div class="col-md-6">
                   <input type="text" name="name" class="form-control" placeholder="Your Name" required>
